# youtube_downloader

./: .gitignore  LICENSE  README.md  REFACTORING_NOTES.md  main.py  pyproject.toml  requirements.txt  utils.py
src/: __init__.py
src/ui/: cli.py
src/utils/: __init__.py  helpers.py
src/youtube_downloader/: __init__.py
src/youtube_downloader/core/: __init__.py  downloader.py  playlist.py
src/youtube_downloader/ui/: __init__.py
src/youtube_downloader/utils/: __init__.py  helpers.py
